--- a/style.css
+++ b/style.css
@@ -2,12 +2,23 @@
 background:crimson;
 width: 100px;
 height: 100px;
-position:absolute;left:20px;bottom:200px;
+position:absolute;left:20px;bottom:100px;
 transition: 500ms;
 }
-div#enemy{
-    position:absolute;left:1000%;top:50%;
+div#hi{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    color:white;
+    margin: auto;
+    font-size: 25px;
 }
 body{
     background:#333333;
+}
+
+a{
+    color:cyan;
 }
